@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.154 2005/06/14 10:32:01 ph10 Exp $
+$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.155 2005/06/14 13:48:40 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -113,6 +113,8 @@ TF/05 Fixed a ${extract error message typo reported by Jeremy Harris
 
 PH/12 Applied Alex Kiernan's patch for the API change for the error callback
       function for BDB 4.3.
+
+PH/13 Changed auto_thaw such that it does not apply to bounce messages.
 
 
 Exim version 4.51
